--- a/index.html
+++ b/index.html
@@ -308,44 +308,56 @@
 
   <!-- JS -->
   <script>
-    // Order form submit
-    document.getElementById('orderForm').addEventListener('submit', function (e) {
-      e.preventDefault();
-      fetch('https://script.google.com/macros/s/AKfycbzK4a7Xl4ZJJgTNujR1AYcLh9VJhEpogDasgMignvQnMfx3R7xVWvYXndBP_-VbTKc/exec', {
-        method: 'POST',
-        body: new FormData(this)
-      })
-        .then(() => {
-          alert('✅ Order submitted successfully!');
+  // Order form submit
+  document.getElementById('orderForm').addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    fetch(
+      "https://script.google.com/macros/s/AKfycbzK4a7Xl4ZJJgTNujR1AYcLh9VJhEpogDasgMignvQnMfx3R7xVWvYXndBP_-VbTKc/exec",
+      {
+        method: "POST",
+        body: new FormData(this),
+      }
+    )
+      .then((res) => {
+        if (res.ok) {
+          alert("✅ Thank you! Your order has been submitted successfully.");
           this.reset();
-        })
-        .catch(() => alert('❌ Something went wrong. Please try again.'));
+        } else {
+          alert("⚠️ Order not submitted. Please try again.");
+        }
+      })
+      .catch((err) => {
+        console.error(err);
+        alert("❌ Something went wrong. Please check your internet and try again.");
+      });
+  });
+
+  // Quantity
+  document.addEventListener('DOMContentLoaded', () => {
+    const minusBtn = document.querySelector('.minus-btn');
+    const plusBtn = document.querySelector('.plus-btn');
+    const quantityInput = document.querySelector('.quantity-input');
+    const buyButton = document.querySelector('.buy-now-btn');
+    const orderFormSection = document.getElementById('orderFormSection');
+
+    minusBtn.addEventListener('click', () => {
+      let value = parseInt(quantityInput.value) || 1;
+      if (value > 1) quantityInput.value = value - 1;
     });
 
-    // Quantity
-    document.addEventListener('DOMContentLoaded', () => {
-      const minusBtn = document.querySelector('.minus-btn');
-      const plusBtn = document.querySelector('.plus-btn');
-      const quantityInput = document.querySelector('.quantity-input');
-      const buyButton = document.querySelector('.buy-now-btn');
-      const orderFormSection = document.getElementById('orderFormSection');
-
-      minusBtn.addEventListener('click', () => {
-        let value = parseInt(quantityInput.value) || 1;
-        if (value > 1) quantityInput.value = value - 1;
-      });
-
-      plusBtn.addEventListener('click', () => {
-        let value = parseInt(quantityInput.value) || 1;
-        quantityInput.value = value + 1;
-      });
-
-      buyButton.addEventListener('click', e => {
-        e.preventDefault();
-        orderFormSection.scrollIntoView({ behavior: 'smooth' });
-      });
+    plusBtn.addEventListener('click', () => {
+      let value = parseInt(quantityInput.value) || 1;
+      quantityInput.value = value + 1;
     });
-  </script>
+
+    buyButton.addEventListener('click', e => {
+      e.preventDefault();
+      orderFormSection.scrollIntoView({ behavior: 'smooth' });
+    });
+  });
+</script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
