--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+ <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/891/891462.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My E-Commerce Store</title>
+  <title>Habibi Store</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -115,16 +117,39 @@
     .product-card:hover img {
       transform: scale(1.05);     /* Subtle zoom effect on hover */
     }
+        .site-logo {
+      height: 70px;         /* desktop size — change karo agar chaho */
+      width: auto;
+      display: inline-block;
+      vertical-align: middle;
+    }
 
-
-  </style>
+    /* mobile ke liye chhota karna */
+    @media (max-width: 576px) {
+      .site-logo { height: 32px; }
+    }
+    .site-logo {
+  height: 60px;
+  width: auto;
+    }
+    .brand-name {
+      color: #fff;          /* white text */
+      font-weight: 700;     /* bold */
+      font-size: 1.25rem;   /* thoda bada */
+    }
+</style>
 </head>
-
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">MyStore</a>
+      <a class="navbar-brand d-flex align-items-center" href="/">
+  <img src="https://i.postimg.cc/CKSW44LM/a-clean-minimalist-logo-design-featuring-DSGJ2c-Bj-Ru-Wtf-Eapr-Wa4g-A-46w-F9s-VQQEyh9-Nc-Xd-I8c8w-removebg-prev.png" alt="Habibi Store" class="site-logo">
+  <span class="brand-name ms-2">Habibi Store</span>
+</a>
+
+
+
       <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -274,6 +299,7 @@
       </form>
     </div>
   </section>
+  <div id="formMessage" class="alert text-center d-none"></div>
 
   <!-- Customer Reviews -->
   <section class="container my-5">
@@ -308,9 +334,20 @@
 
   <!-- JS -->
   <script>
-  // Order form submit
-  document.getElementById('orderForm').addEventListener('submit', function (e) {
+  const orderForm = document.getElementById('orderForm');
+  const formMessage = document.createElement("div");
+  formMessage.id = "formMessage";
+  formMessage.className = "alert text-center d-none";
+  orderForm.querySelector('button[type="submit"]').insertAdjacentElement("afterend", formMessage);
+
+
+  orderForm.addEventListener('submit', function (e) {
     e.preventDefault();
+
+    // Turant message dikhaye
+    formMessage.className = "alert alert-info text-center";
+    formMessage.innerText = "⏳ Please wait... submitting your order";
+    formMessage.classList.remove("d-none");
 
     fetch(
       "https://script.google.com/macros/s/AKfycbzK4a7Xl4ZJJgTNujR1AYcLh9VJhEpogDasgMignvQnMfx3R7xVWvYXndBP_-VbTKc/exec",
@@ -321,15 +358,18 @@
     )
       .then((res) => {
         if (res.ok) {
-          alert("✅ Thank you! Your order has been submitted successfully.");
+          formMessage.className = "alert alert-success text-center";
+          formMessage.innerText = "✅ Thank you! Your order has been submitted successfully.";
           this.reset();
         } else {
-          alert("⚠️ Order not submitted. Please try again.");
+          formMessage.className = "alert alert-warning text-center";
+          formMessage.innerText = "⚠️ Order not submitted. Please try again.";
         }
       })
       .catch((err) => {
         console.error(err);
-        alert("❌ Something went wrong. Please check your internet and try again.");
+        formMessage.className = "alert alert-danger text-center";
+        formMessage.innerText = "❌ Something went wrong. Please check your internet.";
       });
   });
 
